tests/typing/fail/nontuple-01.stderr
error: tuples don't exist: int * int is not a valid type...
 --> tests/typing/fail/nontuple-01.rs:9:13
  |
9 |             non(1, 2)
  |             ^^^^^^^^^
